<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:background="@drawable/gradient"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar"
                android:background="@color/dimblack"
                android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                app:popupTheme="@style/MenuStyle">
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alef_bold"
                android:text="@string/aboutus"
                android:textAlignment="center"
                android:layout_margin="15dp"/>

        </LinearLayout>

        <!--    Frans-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="8dp"
            android:id="@+id/test"
            android:background="@drawable/card_profile">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alef_bold"
                android:text="@string/Frans"
                android:textColor="@color/dimblack"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/username"
                app:layout_constraintEnd_toEndOf="@+id/profile_image"
                app:layout_constraintStart_toStartOf="@+id/profile_image"
                app:layout_constraintTop_toBottomOf="@+id/profile_image"
                app:layout_constraintBottom_toBottomOf="@+id/test"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alef_bold"
                android:text="@string/FransNIM"
                android:textColor="@color/dimblack"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="@+id/username"
                app:layout_constraintStart_toStartOf="@+id/username"
                app:layout_constraintTop_toBottomOf="@+id/username"
                tools:layout_editor_absoluteY="8dp"
                android:layout_marginBottom="50dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--    Ryan-->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="8dp"
                android:id="@+id/test2"
                android:background="@drawable/card_profile">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alef_bold"
                    android:text="@string/Ryan"
                    android:textColor="@color/dimblack"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:id="@+id/username2"
                    app:layout_constraintEnd_toEndOf="@+id/profile_image2"
                    app:layout_constraintStart_toStartOf="@+id/profile_image2"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image2"
                    app:layout_constraintBottom_toBottomOf="@+id/test2"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/intro2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alef_bold"
                    android:text="@string/RyanNIM"
                    android:textColor="@color/dimblack"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="@+id/username2"
                    app:layout_constraintStart_toStartOf="@+id/username2"
                    app:layout_constraintTop_toBottomOf="@+id/username2"
                    tools:layout_editor_absoluteY="8dp"
                    android:layout_marginBottom="50dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--    Juan-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="8dp"
            android:id="@+id/test3"
            android:background="@drawable/card_profile">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image3"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alef_bold"
                    android:text="@string/Juan"
                    android:textColor="@color/dimblack"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:id="@+id/username3"
                    app:layout_constraintEnd_toEndOf="@+id/profile_image3"
                    app:layout_constraintStart_toStartOf="@+id/profile_image3"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image3"
                    app:layout_constraintBottom_toBottomOf="@+id/test3"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/intro3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alef_bold"
                    android:text="@string/JuanNIM"
                    android:textColor="@color/dimblack"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="@+id/username3"
                    app:layout_constraintStart_toStartOf="@+id/username3"
                    app:layout_constraintTop_toBottomOf="@+id/username3"
                    tools:layout_editor_absoluteY="8dp"
                    android:layout_marginBottom="50dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        <!--    Cindy-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="8dp"
            android:id="@+id/test4"
            android:background="@drawable/card_profile">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image4"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alef_bold"
                    android:text="@string/Cindy"
                    android:textColor="@color/dimblack"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:id="@+id/username4"
                    app:layout_constraintEnd_toEndOf="@+id/profile_image4"
                    app:layout_constraintStart_toStartOf="@+id/profile_image4"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image4"
                    app:layout_constraintBottom_toBottomOf="@+id/test4"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/intro4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alef_bold"
                    android:text="@string/CindyNIM"
                    android:textColor="@color/dimblack"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="@+id/username4"
                    app:layout_constraintStart_toStartOf="@+id/username4"
                    app:layout_constraintTop_toBottomOf="@+id/username4"
                    tools:layout_editor_absoluteY="8dp"
                    android:layout_marginBottom="50dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity"
            android:background="@color/dimblack"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alef_bold"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:text="@string/copyright"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_margin="15dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
